--- a/css/style.css
+++ b/css/style.css
@@ -68,10 +68,6 @@ p{
 .padding-bottom-2em{
   padding-bottom:  2em;
 }
-.padding-top-1em{
-  padding-top: 1em;
-}
-
 .no-padding{
   padding: 0;
 }
@@ -80,7 +76,7 @@ p{
 /*----------------- COMMON CLASS END --------------------*/
 
 
-/*----------------- NAVBAR -----------------*/
+/*----------------- Header -----------------*/
 .header-padding{
   padding-top: 1em;
   padding-bottom: 1em;
@@ -88,7 +84,7 @@ p{
 .header-title{
   font-size: 2em;
 }
-/*----------------- NAVBAR END --------------------*/
+/*----------------- Header END --------------------*/
 
 
 /* --------------Loader Container ---------------*/
@@ -104,10 +100,7 @@ p{
 }
 }
 /*----------------- BANNER PLACE -----------------*/
-.banner-section-padding{
-  padding-top: 2%;
-  /*padding-bottom: 2%;*/
-}
+
 .banner-couple-name{
 font-size: 4.5em;
 font-weight: bolder;
@@ -216,7 +209,7 @@ font-weight: bolder;
 
 .w-detail .icon{ font-size: 3.5em; line-height: 1; color: #00BCD4; }
 
-.section{ padding: 100px 0 70px; }
+/*.section{ padding: 100px 0 70px; }*/
 
 .section .heading{ padding-bottom: 40px; }
 
@@ -331,7 +324,7 @@ section{
     0%{
       opacity: 0;
     }
-    3%{
+    4%{
       opacity: 1;
     }
     20%{
@@ -399,10 +392,7 @@ section{
   text-align: center;
 }
 
-.profile-wrapper {
-  padding-top: 40px;
-  padding-bottom: 40px;
-}
+
 .profile-wrapper:focus {
   outline: 0;
 }
@@ -551,6 +541,10 @@ font-weight: bolder;
   font-size: 2em;
 }
 
+.profile-wrapper{
+  padding-top: 2em;
+  padding-bottom: 2em;
+}
 /*------------------------Profile Card End------------------------------------*/
 
 /*-----------------------Counter Timer---------------------*/
@@ -606,9 +600,9 @@ font-size: 1.9em
 .balloon-container{
     position: absolute;
     width: 100%;
-    height: 30vh;
+    height: 20vh;
     left: 0;
-    bottom: 105px;
+    bottom: 145px;
   }
   @keyframes animate{
     from {
