--- a/css/style.css
+++ b/css/style.css
@@ -62,8 +62,8 @@ p{
   padding: 5px;
 }
 .padding-top-bottom{
-  padding-top: 2em;
-  padding-bottom: 2em;
+  padding-top: 3em;
+  padding-bottom: 3em;
 }
 .padding-bottom-2em{
   padding-bottom:  2em;
@@ -578,6 +578,15 @@ font-size: 1.9em
 }
 /*----------------------------------------------------------------*/
 
+/*------------------------------- Map area --------------------------------------*/
+
+.map-padding{
+  padding-top: 2%;
+}
+
+/*----------------------------------------------------------------*/
+
+
 /*----------------Contact Footer-----------------------*/
 .footer-contact-font-size{
   font-size: 1.7em;
@@ -600,7 +609,7 @@ font-size: 1.9em
 .balloon-container{
     position: absolute;
     width: 100%;
-    height: 20vh;
+    height: 15vh;
     left: 0;
     bottom: 145px;
   }
@@ -609,7 +618,7 @@ font-size: 1.9em
       bottom: 0;
     }
     to {
-      bottom:2380%;
+      bottom:2580%;
     }
   }
 }
