--- a/css/style.css
+++ b/css/style.css
@@ -58,6 +58,13 @@ p{
   filter:drop-shadow(8px 8px 8px rgba(0,0,0,0.3)); 
 }
 
+#image-shadow-holding-hand{
+  -webkit-filter: drop-shadow(0 0 0 #00BCD4);
+  filter:drop-shadow(0 0 0 #00BCD4); 
+  /*-webkit-filter: drop-shadow(8px 8px 8px #ca2fff);
+  filter:drop-shadow(8px 8px 8px #ca2fff); */
+}
+
 .padding-5px{
   padding: 5px;
 }
@@ -127,6 +134,13 @@ font-weight: bolder;
   background-size: contain;
   background-position: center;
     /*background-size:contain;*/
+  }
+
+  .banner-holding-hand-margin{
+    margin-top: 5%;
+  }
+  .banner-bride-name-margin{
+    margin-left: -70px;
   }
 
 /*-----------------BANNER PLACE END--------------------*/
@@ -528,6 +542,12 @@ font-weight: bolder;
 .banner-date-font{
   font-size: 2.3em;
 }
+.banner-holding-hand-margin{
+    margin-top: 0 !important;
+  }
+  .banner-bride-name-margin{
+    margin-left: 0 !important;
+  }
 /*------------------------Banner End--------------------------*/
 
 /*------------------------Profile Card ------------------------------------*/
