--- a/css/style.css
+++ b/css/style.css
@@ -26,6 +26,10 @@ body{
    text-shadow: 2px 4px 3px rgba(0,0,0,0.3);
 }
 
+.very-small-shadow{
+  text-shadow: 1px 2px 1px rgba(0,0,0,0.3);
+}
+
 .body-card-shadow{
    box-shadow: 0 27px 55px 0 rgba(0, 0, 0, 0.3), 0 17px 17px 0 rgba(0, 0, 0, 0.15);
 }
@@ -70,6 +74,10 @@ p{
 }
 .no-padding{
   padding: 0;
+}
+.padding-left-right{
+  padding-left: 2em;
+  padding-right: 2em;
 }
 
 
@@ -136,12 +144,6 @@ font-weight: bolder;
     margin-left: -70px;
   }
 
-#banner-image-holding-hand{
-  -webkit-filter: drop-shadow(0 0 0 #00BCD4) !important;
-  filter:drop-shadow(0 0 0 #00BCD4) !important; 
-  /*-webkit-filter: drop-shadow(8px 8px 8px #ca2fff);
-  filter:drop-shadow(8px 8px 8px #ca2fff); */
-}
 
 
 /*-----------------BANNER PLACE END--------------------*/
@@ -232,7 +234,9 @@ font-weight: bolder;
 
 .section .heading .icon.color-white{ color: #fff; }
 
-
+.w-detail p{
+  text-shadow: 1px 2px 1px rgba(0,0,0,0.3);
+}
 .section .margin-bottom{ margin-bottom: 30px; }
 .wedding-details p{
 font-size: 1.2em;
@@ -305,7 +309,7 @@ section{
   .balloon-container{
     position: absolute;
     width: 100%;
-    height: 45vh;
+    height: 30vh;
     left: 0;
     bottom: 200px;
   }
@@ -629,7 +633,7 @@ font-size: 1.9em
 .balloon-container{
     position: absolute;
     width: 100%;
-    height: 15vh;
+    height: 10vh;
     left: 0;
     bottom: 145px;
   }
@@ -656,7 +660,7 @@ font-size: 1.9em
 .balloon-container{
     position: absolute;
     width: 100%;
-    height: 40vh;
+    height: 25vh;
     left: 0;
     bottom: 160px;
   }
