--- a/css/style.css
+++ b/css/style.css
@@ -16,9 +16,6 @@ body{
 .center-text{ 
 	text-align: center; 
 } 
-/*.section{ 
-	padding: 100px 0 70px; 	
-}*/
 .heading-text-shadow{
   text-shadow: 2px 6px 6px rgba(0,0,0,0.2), 0px -5px 35px rgba(255,255,255,0.3);
 }
@@ -61,6 +58,10 @@ p{
   -webkit-filter: drop-shadow(8px 8px 8px rgba(0,0,0,0.3));
   filter:drop-shadow(8px 8px 8px rgba(0,0,0,0.3)); 
 }
+#divider-image-shadow{
+  -webkit-filter: drop-shadow(8px 8px 5px rgba(0,0,0,0.3));
+  filter:drop-shadow(8px 8px 5px rgba(0,0,0,0.3)); 
+}
 
 .padding-5px{
   padding: 5px;
@@ -102,11 +103,6 @@ p{
 .loader-image-margin{
   margin-left: 8%;
 }
-@media (max-width: 991.98px) {
-  .loader-image-margin{
-  margin-left: 12%;
-}
-}
 /*----------------- BANNER PLACE -----------------*/
 
 .banner-couple-name{
@@ -128,21 +124,12 @@ font-weight: bolder;
 .banner-date-font{
   font-size: 1.7em;
 }
-
-.banner-bg-image{
-  background: url('../images/banner-image.jpg');
-  background-repeat: no-repeat; 
-  background-size: contain;
-  background-position: center;
-    /*background-size:contain;*/
-  }
-
-  .banner-holding-hand-margin{
-    margin-top: 5%;
-  }
-  .banner-bride-name-margin{
-    margin-left: -70px;
-  }
+.banner-holding-hand-margin{
+  margin-top: 5%;
+}
+.banner-bride-name-margin{
+  margin-left: -70px;
+}
 
 
 
@@ -286,20 +273,6 @@ font-size: 1.2em;
 }
 
 /*-----------------  WEDDING DETAILS AREA END -----------------*/
-
-/*----------------- WELCOME AREA ----------------- */
-
- .welcome-image-bg{
-  background: url('../images/welcome-bg.jpg');
-  background-repeat: no-repeat; 
-  background-size: contain;
-  background-position: center;
-  }
-
-
-/*-----------------   WELCOME AREA END -----------------*/
-
-
 
 /* ----------------- BALLOON FLOW ANIMATION  -----------------*/
 section{
@@ -531,7 +504,9 @@ section{
 
 
 @media (max-width: 991.98px) {
-
+ .loader-image-margin{
+  margin-left: 12%;
+}
   /*-------------Banner-------------- */
 .banner-couple-name{
 font-size: 7.6em;
